import org.apache.tools.ant.taskdefs.condition.Os

plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '1.1.0'
    id 'idea'
    id 'com.gradleup.shadow' version "9.4.1"
}

repositories {
    mavenCentral()
    google()
    gradlePluginPortal()
}

sourceSets {
    awt {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
    swt {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    nativesWindowsX64
    nativesWindowsARM64
    nativesLinuxX64
    nativesLinuxARM64
    nativesMacosX64
    nativesMacosARM64
}


dependencies {
    implementation("com.github.mizosoft.methanol:methanol:1.9.0")

    swtCompileOnly 'org.eclipse.platform:org.eclipse.swt.gtk.linux.x86_64:3.133.0'
    nativesWindowsX64 'org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.133.0'
    nativesWindowsARM64 'org.eclipse.platform:org.eclipse.swt.win32.win32.aarch64:3.133.0'
    nativesLinuxX64 'org.eclipse.platform:org.eclipse.swt.gtk.linux.x86_64:3.133.0'
    nativesLinuxARM64 'org.eclipse.platform:org.eclipse.swt.gtk.linux.aarch64:3.133.0'
    nativesMacosX64 'org.eclipse.platform:org.eclipse.swt.cocoa.macosx.x86_64:3.133.0'
    nativesMacosARM64 'org.eclipse.platform:org.eclipse.swt.cocoa.macosx.aarch64:3.133.0'
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

jar {
    archiveFileName = "launcher.jar"

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes(
            'Main-Class': application.mainClass
        )
    }
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
}

tasks.register("jarAWT", com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
    archiveBaseName = "launcher"
    archiveClassifier = "awt"

    from sourceSets.main.output
    from sourceSets.awt.output

    exclude('META-INF/*.RSA')
    exclude('META-INF/*.SF')
    exclude('META-INF/*.DSA')
    exclude('META-INF/eclipse*')

    configurations = [project.configurations.getByName("runtimeClasspath"), project.configurations.getByName("awtRuntimeClasspath")]

    mergeServiceFiles()

    manifest {
        attributes 'Main-Class': application.mainClass
    }
}

application {
    mainClass = "com.pokemmo.launcher.Launcher"
}

def swtPlatforms = [
        [name: "WindowsX64", swt_os: "win32", swt_arch: "x86_64"],
        [name: "WindowsARM64", swt_os: "win32", swt_arch: "aarch64"],
        [name: "LinuxX64", swt_os: "linux", swt_arch: "x86_64"],
        [name: "LinuxARM64", swt_os: "linux", swt_arch: "aarch64"],
        [name: "MacosARM64", swt_os: "macosx", swt_arch: "x86_64"],
        [name: "MacosX64", swt_os: "macosx", swt_arch: "aarch64"]
]

swtPlatforms.each {platform ->
    tasks.register("jar${platform.name}", com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
        archiveBaseName = "launcher"
        archiveClassifier = platform.name

        from sourceSets.main.output
        from sourceSets.swt.output

        exclude('META-INF/*.RSA')
        exclude('META-INF/*.SF')
        exclude('META-INF/*.DSA')
        exclude('META-INF/eclipse*')

        configurations = [project.configurations.getByName("runtimeClasspath"), project.configurations.getByName("natives${platform.name}")]

        mergeServiceFiles()

        manifest {
            attributes 'Main-Class': application.mainClass
            attributes 'SWT-OS': platform.swt_os
            attributes 'SWT-Arch': platform.swt_arch
        }
    }
}

graalvmNative {
    agent {
        enabled.set(true)
        defaultMode = "standard" // Can be standard, conditional, or direct
    }

    metadataRepository {
        enabled = false
    }

    binaries {
        all {
            javaLauncher = javaToolchains.launcherFor {
                languageVersion = JavaLanguageVersion.of(25)
                vendor = JvmVendorSpec.GRAAL_VM
                //Workaround https://github.com/gradle/gradle/issues/36118
                //nativeImageCapable = true
            }

            imageName = "Launcher"
            mainClass = application.mainClass
            requiredVersion = '25.0'
            buildArgs.addAll("-march=compatibility",
                    "--enable-url-protocols=https",
                    "-Dfile.encoding=UTF-8",
                    "-Os",

                    //Prevents pulling in unnecessary awt because reasons https://github.com/oracle/graal/issues/3225
                    //  Summary: The AWT inclusion is triggered by SVM's ServiceLoaderFeature registering a reachability handler on java.net.ContentHandlerFactory (line 183 of ServiceLoaderFeature.java). Once that service becomes reachable through any URL/URLConnection code path, the
                    //  handler registers the JDK-declared provider sun.awt.www.content.MultimediaContentHandlers, whose image content-handler classes transitively pull in Toolkit, BufferedImage, and Color. Your -H:ServiceLoaderFeatureExcludeServices=java.net.ContentHandlerFactory flag
                    //  short-circuits this at line 167-181 by removing the service from the catalog before the reachability handler is ever installed.
                    "-H:ServiceLoaderFeatureExcludeServices=java.net.ContentHandlerFactory",

                    "--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted=ALL-UNNAMED",
                    "-R:MaxHeapSize=384M",
                    "-H:IncludeLocales=en,de,es,fr,it,ja,ko,pl,pt,pt-Latn-BR,zh-Hans,zh-CN,zh-HK,zh-TW,zh-Hant,nl,el,tr,fil,ru"
            )
            jvmArgs.addAll("-Dfile.encoding=UTF8")
            sharedLibrary = false
            useFatJar = true
            resources {
                includedPatterns.addAll(".*\\.png\$")
            }
        }
        create("WindowsX64") {
            classpath.setFrom(tasks.jarWindowsX64)
            resources {
                includedPatterns.addAll(".*\\.dll\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.win32.*",
                    "-H:NativeLinkerOption=/SUBSYSTEM:WINDOWS",
                    "-H:NativeLinkerOption=/ENTRY:mainCRTStartup",
                    "-H:NativeLinkerOption=/MANIFEST:EMBED",
                    '-H:NativeLinkerOption="/MANIFESTUAC:level=\'asInvoker\' uiAccess=\'false\'"',
                    "-H:NativeLinkerOption=" + rootProject.file("icons/icon.res").absolutePath
            );
        }
        create("WindowsARM64") {
            classpath.setFrom(tasks.jarWindowsARM64)
            resources {
                includedPatterns.addAll(".*\\.dll\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.win32.*",
                    "-H:NativeLinkerOption=/SUBSYSTEM:WINDOWS",
                    "-H:NativeLinkerOption=/ENTRY:mainCRTStartup",
                    "-H:NativeLinkerOption=/MANIFEST:EMBED",
                    '-H:NativeLinkerOption="/MANIFESTUAC:level=\'asInvoker\' uiAccess=\'false\'"',
                    "-H:NativeLinkerOption=" + rootProject.file("icons/icon.res").absolutePath
            );
        }
        create("LinuxX64") {
            classpath.setFrom(tasks.jarLinuxX64)
            resources {
                includedPatterns.addAll(".*\\.so\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.gtk.*", "-H:Preserve=package=org.eclipse.swt.internal.gtk3.*", "-H:Preserve=package=org.eclipse.swt.internal.gtk4.*")
        }
        create("LinuxARM64") {
            classpath.setFrom(tasks.jarLinuxARM64)
            resources {
                includedPatterns.addAll(".*\\.so\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.gtk.*", "-H:Preserve=package=org.eclipse.swt.internal.gtk3.*", "-H:Preserve=package=org.eclipse.swt.internal.gtk4.*")
        }
        create("MacosARM64") {
            classpath.setFrom(tasks.jarMacosARM64)
            resources {
                includedPatterns.addAll(".*\\.dylib\$", ".*\\.jnilib\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.cocoa.*")
            jvmArgs.addAll("-XstartOnFirstThread")
        }
        create("MacosX64") {
            classpath.setFrom(tasks.jarMacosX64)
            resources {
                includedPatterns.addAll(".*\\.dylib\$", ".*\\.jnilib\$")
            }
            buildArgs.addAll("-H:Preserve=package=org.eclipse.swt.internal.cocoa.*")
            jvmArgs.addAll("-XstartOnFirstThread")
        }
    }
}

task nativeCompileCI()
{
    def isARM = System.getProperty("os.arch").startsWith("arm") || System.getProperty("os.arch").startsWith("aarch64");
    if(Os.isFamily(Os.FAMILY_WINDOWS)) {
        if(isARM)
            dependsOn "nativeWindowsARM64Compile"
        else
            dependsOn "nativeWindowsX64Compile"
    }
    else if(Os.isFamily(Os.FAMILY_MAC)) {
        if(isARM)
            dependsOn "nativeMacosARM64Compile"
        else
            dependsOn "nativeMacosX64Compile"
    }
    else if(Os.isFamily(Os.FAMILY_UNIX)) {
        if(isARM)
            dependsOn "nativeLinuxARM64Compile"
        else
            dependsOn "nativeLinuxX64Compile"
    }
}

task dist(type: GradleBuild) {
    buildName "dist"
    startParameter.projectProperties = gradle.startParameter.projectProperties
    tasks = ['clean', 'jar']
}

assemble.dependsOn dist